# blogging-system

blog_api/: .pre-commit-config.yaml  README.md  database.py  erd.mmd  main.py  models.py  mypy.ini  pyproject.toml  requirements.txt  schema.sql
src/main/java/ru/tbank/fdsspring/controller/: UserController.java
src/main/java/ru/tbank/fdsspring/service/: UserService.java
src/main/resources/: application.yaml
