[tool.poetry]
name = "blog_api"
version = "0.1.0"
description = "blogggg"
authors = ["Мария Кубарова <mariatesler53@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = "^0.22"
pydantic = {version="^1.10", extras=["email"]}

[tool.poetry.dev-dependencies]
black = "^24.1"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.5"
pre-commit = "^3.4"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
disallow_untyped_defs = true
